--- a/compose.yml
+++ b/compose.yml
@@ -7,11 +7,18 @@ services:
      - "./html:/usr/share/nginx/html:ro"
     deploy:
       replicas: 1
-    labels:
-      - "traefik.frontend.rule=Host:www.wpcdas.com,wpcdas.com"
-      - "traefik.backend=frontpage"
-      - "traefik.enable=true"
-      - "traefik.port=80"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.frontpage.rule=Host(`www.wpcdas.com`)"
+        - "traefik.http.routers.frontpage.entrypoints=https"
+        - "traefik.http.routers.frontpage.service=frontpage"
+        - "traefik.http.services.frontpage.loadbalancer.server.port=80"
+        - "traefik.http.routers.frontpage.tls=true"
+#Traefik v1.7 config
+#      - "traefik.frontend.rule=Host:www.wpcdas.com,wpcdas.com"
+#      - "traefik.backend=frontpage"
+#      - "traefik.enable=true"
+#      - "traefik.port=80"
 
 networks:
   default:
